--- a/config/level2/statement_en.html
+++ b/config/level2/statement_en.html
@@ -1,71 +1,375 @@
-<div id="statement_back" class="statement_back" style="display:none"></div>  <div class="statement-body">
-      <!-- LEAGUE ALERT -->
-      <div style="color: #7cc576; 
-        background-color: rgba(124, 197, 118,.1);
-        padding: 20px;
-        margin-right: 15px;
-        margin-left: 15px;
-        margin-bottom: 10px;
-        text-align: left;">
-          <div style="text-align: center; margin-bottom: 6px">
-            <img src="//cdn.codingame.com/smash-the-code/statement/league_wood_04.png" />
-          </div>
-          <p style="text-align: center; font-weight: 700; margin-bottom: 6px;">
-            This is a <b>league based</b> challenge.
-          </p>
-          <span class="statement-league-alert-content">
-            For this challenge, multiple versions of the same game are available. Once you have proven your skills on this first version, you will access a higher league and extra rules will be unlocked.
-          </span>
-      </div> 
-      <!-- GOAL --> 
-      <div class="statement-section statement-goal"> 
-        <h2> 
-          <span class="icon icon-goal">&nbsp;</span> 
-          <span>The Goal</span> 
-        </h2> 
-        <div class="statement-goal-content"> 
-          We're adding a new level of complexity: the game is now played on a tic-tac-toe board where each square is a normal tic-tac-toe. The objective is to align 3 marks on the main tic-tac-toe board by winning on the smaller boards.
-        </div> 
-      </div> 
-      <!-- RULES --> 
-      <div class="statement-section statement-rules"> 
-        <h2> 
-          <span class="icon icon-rules">&nbsp;</span> 
-          <span>Rules</span> 
-        </h2> 
-        <div><div class="statement-rules-content"><p>When a player plays on a small board, he also decides where the next player will be allowed to play: for example, if a player has played in the bottom left square of one of the small boards, the next player will play on the small board located at the bottom left square of the main board.</p>
+<div class="statement-body">
+    <!-- GOAL -->
+    <div class="statement-section statement-goal">
+        <h2>
+            <span class="icon icon-goal">&nbsp;</span>
+            <span>The Goal</span>
+        </h2>
+        <img class="statement-goal-content">
+        <p>
+            Hit your opponent and manage our energy to score 20 points!
+        </p>
+    </div>
+    <!-- RULES -->
+    <div class="statement-section statement-rules">
+        <h2>
+            <span class="icon icon-rules">&nbsp;</span>
+            <span>Rules</span>
+        </h2>
+        <div>
+            <div class="statement-rules-content">
+                <h3>Actions</h3>
+                <p><br>Two players choose simultaneously only one action among fives: break and walk and retreat and
+                    lunge and parry.
+                    in details:</p>
+                <table>
+                    <tr>
+                        <th>name</th>
+                        <th>code</th>
+                        <th>energy</th>
+                        <th>move</th>
+                        <th>long</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <action>BREAK</action>
+                        </td>
+                        <td>
+                            <const>1</const>
+                        </td>
+                        <td>
+                            <const>2</const>
+                        </td>
+                        <td>
+                            <const>0</const>
+                        </td>
+                        <td>
+                            <const>0</const>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <action>WALK</action>
+                        </td>
+                        <td>
+                            <const>2</const>
+                        </td>
+                        <td>
+                            <const>-1</const>
+                        </td>
+                        <td>
+                            <const>30</const>
+                        </td>
+                        <td>
+                            <const>0</const>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <action>RETREAT</action>
+                        </td>
+                        <td>
+                            <const>3</const>
+                        </td>
+                        <td>
+                            <const>-1</const>
+                        </td>
+                        <td>
+                            <const>-30</const>
+                        </td>
+                        <td>
+                            <const>0</const>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <action>LUNGE</action>
+                            (attack)
+                        </td>
+                        <td>
+                            <const>4</const>
+                        </td>
+                        <td>
+                            <const>-2</const>
+                        </td>
+                        <td>
+                            <const>0</const>
+                        </td>
+                        <td>
+                            <const>30</const>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <action>PARRY</action>
+                            (defense)
+                        </td>
+                        <td>
+                            <const>5</const>
+                        </td>
+                        <td>
+                            <const>-2</const>
+                        </td>
+                        <td>
+                            <const>0</const>
+                        </td>
+                        <td>
+                            <const>-30</const>
+                        </td>
+                    </tr>
+                </table>
 
-<p>If a player is sent to a board that is either already won, or full, then that player is allowed to play in any empty square.</p>
+                <div style="color:#7cc576;background-color:rgba( 124 , 197 , 118 , 0.1 );">
+                    Added in the second league:
+                    <table>
+                        <tr>
+                            <th>name</th>
+                            <th>code</th>
+                            <th>energy</th>
+                            <th>move</th>
+                            <th>long</th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <action>MIDDLE_POSTURE</action>
+                            </td>
+                            <td>
+                                <const>6</const>
+                            </td>
+                            <td>
+                                <const>-1</const>
+                            </td>
+                            <td>
+                                <const>0</const>
+                            </td>
+                            <td>
+                                <const>0</const>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <action>TOP_POSTURE</action>
+                            </td>
+                            <td>
+                                <const>7</const>
+                            </td>
+                            <td>
+                                <const>-1</const>
+                            </td>
+                            <td>
+                                <const>0</const>
+                            </td>
+                            <td>
+                                <const>0</const>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <action>BOTTOM_POSTURE</action>
+                            </td>
+                            <td>
+                                <const>8</const>
+                            </td>
+                            <td>
+                                <const>-1</const>
+                            </td>
+                            <td>
+                                <const>0</const>
+                            </td>
+                            <td>
+                                <const>0</const>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <ul>
+                    <li>code: number used to communicate with the referee.</li>
+                    <li>energy: consume and produce in the range [
+                        <const>0</const>
+                        ,
+                        <const>20</const>
+                        ].
+                    </li>
+                    <li>move: apply a move of your character in the range [
+                        <const>0</const>
+                        ,
+                        <const>500</const>
+                        ].
+                    </li>
+                    <li>long: positive is an attack; negative is a defense; see §Assault.</li>
+                </ul>
+                <h3>Resolutions</h3>
+                <ul>
+                    <li>The players respawn when they collide (<var>myPosition</var> > <var>yourPosition</var>) or an
+                        assault is succeeded.
+                    </li>
+                    <li>The players score both when they touch simultaneously (
+                        <action>LUNGE</action>
+                        vs
+                        <action>LUNGE</action>
+                        are resolved).
+                    </li>
+                    <li>Your action is suppressed and the rest of your energy is spent when you request an action
+                        without enough energy.
+                    </li>
+                    <li>Your move is resolved as far as possible and energy spent when you exceed the boundaries.</li>
+                </ul>
+                <h3>Assaults</h3>
+                <p>
+                    <br>Assault resolution depends of longs and positions:
+                </p>
+                <div style='background-color:#444;font-family:monospace;padding:1em'>
+                    <p>isTouchedWhenAttackDefense(strikerPosition:int, defenderPosition:int) -> (defender + Parry_Range)
+                        + (striker + Lunge_Range) > 500;</p>
+                    <p>isTouchedWhenAttack(strikerPosition:int, defenderPosition:int) -> (defender) + (striker +
+                        Lunge_Range) > 500;</p>
+                </div>
 
-<p>You can download the source code of this game on <a href="https://github.com/CodinGame/game-ultimate-tictactoe" target="_blank">GitHub</a>. You can create your own game using the <a href="https://github.com/CodinGame/codingame-sdk-doc" target="_blank">CodinGame SDK</a>!</p></div>
-          <!-- Victory conditions --> 
-          <div class="statement-victory-conditions"> 
-            <div class="icon victory"></div> 
-            <div class="blk"> 
-              <div class="title">Victory Conditions</div> 
-              <div class="text">You've won on 3 aligned smaller tic-tac-toe boards.</div> 
-            </div> 
-          </div> 
-        </div> 
-      </div> 
-      <!-- PROTOCOL --> 
-      <div class="statement-section statement-protocol"> 
-        <h2> 
-          <span class="icon icon-protocol">&nbsp;</span> 
-          <span>Game Input</span> 
-        </h2> 
-        <!-- Protocol block --> 
-        <div class="blk"> 
-  <div class="title">Input for one game turn</div> 
-          <div class="text"><span class="statement-lineno">Line 1:</span> 2 space separated integers <var>opponentRow</var> and <var>opponentCol</var>, the opponent's last action (<const>-1</const> <const>-1</const> for the first turn). <br>
-<span class="statement-lineno">Line 2:</span> the number of valid actions for this turn, <var>validActionCount</var>. <br>
-<span class="statement-lineno">Next <var>validActionCount</var> lines:</span> 2 space separated integers <var>row</var> and <var>col</var>, the coordinates you're allowed to play at.</div> 
-        </div> 
- 
-        <!-- Protocol block --> 
-        <div class="blk"> 
-  <div class="title">Output for one game turn</div> 
-          <div class="text"><span class="statement-lineno">Line 1:</span> 2 space separated integers <var>row</var> and <var>col</var>.</div> 
-        </div> 
-      </div>
-  </div>
+                <p>to use it, Normalize the position of your opponent, two sample bellow:</p>
+                <div style='background-color:#444;font-family:monospace;padding:1em'>
+                    <p>yourPositionNormalized = (500 - yourPosition)</p>
+                    <p>myAttackYouDefend = isTouchedWhenAttackDefense(myPosition, yourPositionNormalized)</p>
+                    <p>youAttack = isTouchedWhenAttack(yourPositionNormalized, myPosition)</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- PROTOCOL -->
+    <div class="statement-section statement-protocol">
+        <h2>
+            <span class="icon icon-protocol">&nbsp;</span>
+            <span>Game I/O</span>
+        </h2>
+        <!-- Protocol block -->
+        <div class="blk">
+            <div class="title">Input for one game turn</div>
+            <div class="text">
+                <span class="statement-lineno">Line 1:</span><var>myPosition</var>&nbsp;<var>myEnergy</var>&nbsp;<var>myScore</var>&nbsp;<var>myPosture</var>
+            </div>
+            <div class="text">
+                <span class="statement-lineno">Line 2:</span><var>yourPosition</var>&nbsp;<var>yourEnergy</var>&nbsp;<var>yourScore</var>&nbsp;<var>yourPosture</var>
+            </div>
+            <div class="text">
+                <ul>
+                    <li><var>myPosition</var>, <var>yourPosition</var>: range [
+                        <const>0</const>
+                        ,
+                        <const>500</const>
+                        ], respawn (me:
+                        <const>200</const>
+                        , you:
+                        <const>300</const>
+                        )
+                    </li>
+                    <li><var>myEnergy</var>, <var>yourEnergy</var>: range [
+                        <const>0</const>
+                        ,
+                        <const>20</const>
+                        ], init
+                        <const>20</const>
+                    </li>
+                    <li><var>myScore</var>, <var>yourScore</var>: range [
+                        <const>0</const>
+                        ,
+                        <const>20</const>
+                        ], init
+                        <const>0</const>
+                    </li>
+                    <li><var>myPosture</var>, <var>yourPosture</var>:
+                        <action>MIDDLE_POSTURE</action>
+                        =
+                        <const>6</const>
+                        ,
+                        <action>TOP_POSTURE</action>
+                        =
+                        <const>7</const>
+                        ,
+                        <action>BOTTOM_POSTURE</action>
+                        =
+                        <const>8</const>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- Protocol block -->
+        <div class="blk">
+            <div class="title">Output for one game turn</div>
+            <div class="text">
+                <span class="statement-lineno">Line 1:</span><var>myAction</var>
+            </div>
+            <div class="text">
+                possibles values:
+                <ul>
+                    <li>
+                        <action>BREAK</action>
+                        =
+                        <const>1</const>
+                    </li>
+                    <li>
+                        <action>WALK</action>
+                        =
+                        <const>2</const>
+                    </li>
+                    <li>
+                        <action>RETRAIT</action>
+                        =
+                        <const>3</const>
+                    </li>
+                    <li>
+                        <action>LUNGE</action>
+                        =
+                        <const>4</const>
+                    </li>
+                    <li>
+                        <action>PARRY</action>
+                        =
+                        <const>5</const>
+                    </li>
+                </ul>
+                <div style="color:#7cc576;background-color:rgba( 124 , 197 , 118 , 0.1 );">
+                    <ul>
+                        <li>
+                            <action>MIDDLE_POSTURE</action>
+                            =
+                            <const>6</const>
+                        </li>
+                        <li>
+                            <action>TOP_POSTURE</action>
+                            =
+                            <const>7</const>
+                        </li>
+                        <li>
+                            <action>BOTTOM_POSTURE</action>
+                            =
+                            <const>8</const>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="statement-victory-conditions">
+        <div class="icon victory"></div>
+        <div class="blk">
+            <div class="title">Victory Conditions</div>
+            <div class="text">
+                <ul style="padding-bottom:0">
+                    <li>Score more points than your opponent(s) at games end.</li>
+                    <li>The final result for your ranking equals <var>myScore</var> - <var>YourScore</var>.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="statement-lose-conditions">
+        <div class="icon lose"></div>
+        <div class="blk">
+            <div class="title">Loss Conditions</div>
+            <div class="text">
+                <ul style="padding-bottom:0">
+                    <li>Score fewer points than your opponent(s) at games end.</li>
+                    <li>You do not respond in due time or output an invalid command.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
