--- a/config/level2/welcome_en.html
+++ b/config/level2/welcome_en.html
@@ -1,73 +1,3 @@
 <div>
-    <h2>WIP Zone</h2>
-    the league level 2 is not <b>implemented</b>!
-
-    <h3>Forecast</h3>
-    three actions added:
-    <div style="color:#7cc576;background-color:rgba( 124 , 197 , 118 , 0.1 );padding:2px">
-        Added in the second league:
-        <table>
-            <tr>
-                <th>name</th>
-                <th>code</th>
-                <th>energy</th>
-                <th>move</th>
-                <th>defensive range</th>
-                <th>offensive range</th>
-            </tr>
-            <tr>
-                <td>
-                    <action>MIDDLE_POSTURE</action>
-                </td>
-                <td>
-                    <const>6</const>
-                </td>
-                <td>
-                    <const>-1</const>
-                </td>
-                <td>
-                    <const>0</const>
-                </td>
-                <td>
-                    <const>0</const>
-                </td>
-                <td>
-                    <const>0</const>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <action>TOP_POSTURE</action>
-                </td>
-                <td>
-                    <const>7</const>
-                </td>
-                <td>
-                    <const>-1</const>
-                </td>
-                <td>0</td>
-                <td>0</td>
-                <td>
-                    <const>0</const>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <action>BOTTOM_POSTURE</action>
-                </td>
-                <td>
-                    <const>8</const>
-                </td>
-                <td>
-                    <const>-1</const>
-                </td>
-                <td>0</td>
-                <td>0</td>
-                <td>
-                    <const>0</const>
-                </td>
-            </tr>
-        </table>
-    </div>
-    Posture is used to resolve Assault.
+    <h2>Welcome Level 2</h2>
 </div>
