--- a/config/level2/welcome_en.html
+++ b/config/level2/welcome_en.html
@@ -1,3 +1,4 @@
 <div>
-    <h2>Welcome Level 2</h2>
+    <h2>Congratulate! Welcome Level 2</h2>
+    <p>Two new moves: Double Walk and double retreat</p>
 </div>
