--- a/config/level2/welcome_en.html
+++ b/config/level2/welcome_en.html
@@ -1,4 +1,4 @@
 <div>
     <h2>Congratulate! Welcome Level 2</h2>
-    <p>Two new moves: Double Walk and double retreat</p>
+    <p>this league add two new moves: the double walk and double retreat</p>
 </div>
