--- a/config/level3/welcome_en.html
+++ b/config/level3/welcome_en.html
@@ -1,4 +1,4 @@
 <div>
     <h2>Congratulate! Welcome Level 3</h2>
-    <p>Now, you can spend your energy for drugs 💪.</p>
+    <p>This league add an overall strategy: you can spend your energy for drugs 💪.</p>
 </div>
