RC1 done! (fixed)

--- a/config/level1/statement_en.html
+++ b/config/level1/statement_en.html
@@ -14,20 +14,20 @@
         <p>
             Hit your opponent and manage our energy to score 20 points!
         </p>
-            </div>
+    </div>
 
-            <div style="color:#7cc576;background-color:rgba(124,197 , 118 , 0.1 );padding:1em;padding-left:6em;font-size:1.5em">
-                <p>new rules added in future leagues: ignore the variables marked for the next leagues.</p>
-            </div>
-            <div class="statement-victory-conditions">
-                <div class="icon victory"></div>
-                <div class="blk">
-                    <div class="title">Victory Conditions</div>
-                    <div class="text">
-                        <ul style="padding-bottom:0">
-                            <li>Score more points than your opponent(s) at games end.</li>
-                            <li>Decisive victory when you score 20 points at least 2 points apart.</li>
-                            <li>The final result for your ranking equals <var>my.score</var> - <var>opponent.score</var>.</li>
+    <div style="color:#7cc576;background-color:rgba(124,197 , 118 , 0.1 );padding:1em;padding-left:6em;font-size:1em">
+        <p>new rules added in the league 2 and league 3: ignore the variables marked for the next leagues.</p>
+    </div>
+    <div class="statement-victory-conditions">
+        <div class="icon victory"></div>
+        <div class="blk">
+            <div class="title">Victory Conditions</div>
+            <div class="text">
+                <ul style="padding-bottom:0">
+                    <li>Score more points than your opponent(s) at games end.</li>
+                    <li>Decisive victory when you score 20 points at least 2 points apart.</li>
+                    <li>The final result for your ranking equals <var>my.score</var> - <var>opponent.score</var>.</li>
                         </ul>
                     </div>
                 </div>
@@ -448,7 +448,7 @@
             <tr>
         </table>
         <h2>Call to action!</h2>
-        <p>Give your feedback and vote to encourage the author! Enjoy your games!</p>
+        <p><b>Give your feedback and vote to encourage the author! Enjoy your games!</b></p>
     </div>
 </div>
 <!--</body>-->
