--- a/config/level2/statement_en.html
+++ b/config/level2/statement_en.html
@@ -545,7 +545,7 @@
             </tr>
         </table>
         <h2>Call to action!</h2>
-        <p>Give your feedback and vote to encourage the author! Enjoy your games!</p>
+        <p><b>Give your feedback and vote to encourage the author! Enjoy your games!</b></p>
     </div>
 </div>
 
