--- a/config/level2/statement_en.html
+++ b/config/level2/statement_en.html
@@ -1,8 +1,8 @@
-<!--<html>-->
-<!--    <head>-->
-<!--        <link href="codeingame-mock.css" rel="stylesheet">-->
-<!--    </head>-->
-<!--    <body style="font-family:Open Sans,Lato,sans-serif!important">-->
+<html>
+<head>
+    <link href="codeingame-mock.css" rel="stylesheet">
+</head>
+<body style="font-family:Open Sans,Lato,sans-serif!important">
 <div class="statement-body">
     <!-- GOAL -->
     <div class="statement-section statement-goal">
@@ -14,21 +14,20 @@
         <p>
             Hit your opponent and manage our energy to score 20 points!
         </p>
-            </div>
+    </div>
 
-            <div style="color:#7cc576;background-color:rgba(124,197 , 118 , 0.1 );padding:1em;padding-left:6em;font-size:1.5em">
-                <p>new rules in the green sections.</p>
-            </div>
-            <div class="statement-victory-conditions">
-                <div class="icon victory"></div>
-                <div class="blk">
-                    <div class="title">Victory Conditions</div>
-                    <div class="text">
-                        <ul style="padding-bottom:0">
-                            <li>Score more points than your opponent(s) at games end.</li>
-                            <li>Decisive victory when you score 20 points at least 2 points apart.</li>
-                            <li>The final result for your ranking equals <var>my.score</var> - <var>opponent.score</var>.</li>
-                        </ul>
+    <div class="statement-summary-new-league-rules">
+        <p>read new rules in the green sections.</p>
+    </div>
+    <div class="statement-victory-conditions">
+        <div class="icon victory"></div>
+        <div class="blk">
+            <div class="title">Victory Conditions</div>
+            <div class="text">
+                <ul style="padding-bottom:0">
+                    <li>Score more points than your opponent(s) at games end.</li>
+                    <li>Decisive victory when you score 20 points at least 2 points apart.</li>
+                </ul>
                     </div>
                 </div>
             </div>
@@ -97,14 +96,14 @@
                         </li>
                     </ul>
 
-                    <div style="color:#7cc576;background-color:rgba(124,197,118,0.1);">
+                    <div class="statement-summary-new-league-rules">
                         <ul>
                             <li>
                                 <action>DOUBLE_WALK</action>
-                        : energy=
-                        <const>-4</const>
-                        move=
-                        <const>+40</const>
+                                : energy=
+                                <const>-4</const>
+                                move=
+                                <const>+40</const>
                             </li>
                             <li>
                                 <action>DOUBLE_RETREAT</action>
@@ -300,14 +299,14 @@
                         </li>
                     </ul>
 
-                    <div style="color:#7cc576;background-color:rgba(124,197,118,0.1);">
+                    <div class="statement-summary-new-league-rules">
                         <ul>
                             <li>
                                 <action>DOUBLE_WALK</action>
-                        : energy=
-                        <const>-4</const>
-                        move=
-                        <const>+40</const>
+                                : energy=
+                                <const>-4</const>
+                                move=
+                                <const>+40</const>
                             </li>
                             <li>
                                 <action>DOUBLE_RETREAT</action>
@@ -549,5 +548,5 @@
     </div>
 </div>
 
-<!--</body>-->
-<!--</html>-->
+</body>
+</html>
