--- a/config/level1/statement_en.html
+++ b/config/level1/statement_en.html
@@ -1,8 +1,8 @@
-<!--<html>-->
-<!--    <head>-->
-<!--        <link href="codeingame-mock.css" rel="stylesheet">-->
-<!--    </head>-->
-<!--    <body style="font-family:Open Sans,Lato,sans-serif!important">-->
+<html>
+<head>
+    <link href="codeingame-mock.css" rel="stylesheet">
+</head>
+<body style="font-family:Open Sans,Lato,sans-serif!important">
 <div class="statement-body">
     <!-- GOAL -->
     <div class="statement-section statement-goal">
@@ -16,7 +16,7 @@
         </p>
     </div>
 
-    <div style="color:#7cc576;background-color:rgba(124,197 , 118 , 0.1 );padding:1em;padding-left:6em;font-size:1em">
+    <div class="statement-summary-new-league-rules">
         <p>new rules added in the league 2 and league 3: ignore the variables marked for the next leagues.</p>
     </div>
     <div class="statement-victory-conditions">
@@ -27,51 +27,52 @@
                 <ul style="padding-bottom:0">
                     <li>Score more points than your opponent(s) at games end.</li>
                     <li>Decisive victory when you score 20 points at least 2 points apart.</li>
-                    <li>The final result for your ranking equals <var>my.score</var> - <var>opponent.score</var>.</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="statement-lose-conditions">
-                <div class="icon lose"></div>
-                <div class="blk">
-                    <div class="title">Loss Conditions</div>
-                    <div class="text">
-                        <ul style="padding-bottom:0">
-                            <li>Score fewer points than your opponent(s) at games end.</li>
-                            <li>In some cases you receive a ranking penalty (-20)</li>
-                            <ul>
-                                <li>forfeit: when you run out of energy.</li>
-                                <li>non-combativity: when you and the opponent don't score any point at games end (200 frames).</li>
-                                <li>issue: you do not respond in due time (50ms) or output an invalid command.</li>
-                            </ul>
-                    </ul>
-                </div>
+                </ul>
             </div>
         </div>
-        <!-- RULES -->
-        <div class="statement-section statement-rules">
-            <h2>
-                <span class="icon icon-rules">&nbsp;</span>
-                <span>Rules</span>
-            </h2>
-            <div>
-                <div class="statement-rules-content">
-                    <h3>Actions</h3>
-                    <p><br>Two players choose simultaneously only one action:</p>
+    </div>
+    <div class="statement-lose-conditions">
+        <div class="icon lose"></div>
+        <div class="blk">
+            <div class="title">Loss Conditions</div>
+            <div class="text">
+                <ul style="padding-bottom:0">
+                    <li>Score fewer points than your opponent(s) at games end.</li>
+                    <li>In some cases you receive a ranking penalty (-1)</li>
                     <ul>
-                        <li>
-                            <action>BREAK</action>
+                        <li>forfeit: when you run out of energy.</li>
+                        <li>non-combativity: when you and the opponent don't score any point at games end (200
+                            frames).
+                        </li>
+                        <li>issue: you do not respond in due time (50ms) or output an invalid command.</li>
+                    </ul>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- RULES -->
+    <div class="statement-section statement-rules">
+        <h2>
+            <span class="icon icon-rules">&nbsp;</span>
+            <span>Rules</span>
+        </h2>
+        <div>
+            <div class="statement-rules-content">
+                <h3>Actions</h3>
+                <p><br>Two players choose simultaneously only one action:</p>
+                <ul>
+                    <li>
+                        <action>BREAK</action>
                         : energy=
                         <const>+2</const>
-                        </li>
-                        <li>
-                            <action>WALK</action>
+                    </li>
+                    <li>
+                        <action>WALK</action>
                         : energy=
                         <const>-1</const>
                         move=
                         <const>+20</const>
-                        </li>
+                    </li>
                         <li>
                             <action>RETREAT</action>
                         : energy=
@@ -451,5 +452,5 @@
         <p><b>Give your feedback and vote to encourage the author! Enjoy your games!</b></p>
     </div>
 </div>
-<!--</body>-->
-<!--</html>-->
+</body>
+</html>
