--- a/config/level3/statement_en.html
+++ b/config/level3/statement_en.html
@@ -1,8 +1,8 @@
-<!--<html>-->
-<!--    <head>-->
-<!--        <link href="codeingame-mock.css" rel="stylesheet">-->
-<!--    </head>-->
-<!--    <body style="font-family:Open Sans,Lato,sans-serif!important">-->
+<html>
+<head>
+    <link href="codeingame-mock.css" rel="stylesheet">
+</head>
+<body style="font-family:Open Sans,Lato,sans-serif!important">
 <div class="statement-body">
     <!-- GOAL -->
     <div class="statement-section statement-goal">
@@ -14,21 +14,20 @@
         <p>
             Hit your opponent and manage our energy to score 20 points!
         </p>
-            </div>
+    </div>
 
-            <div style="color:#7cc576;background-color:rgba(124,197 , 118 , 0.1 );padding:1em;padding-left:6em;font-size:1.5em">
-                <p>new rules in the green sections.</p>
-            </div>
-            <div class="statement-victory-conditions">
-                <div class="icon victory"></div>
-                <div class="blk">
-                    <div class="title">Victory Conditions</div>
-                    <div class="text">
-                        <ul style="padding-bottom:0">
-                            <li>Score more points than your opponent(s) at games end.</li>
-                            <li>Decisive victory when you score 20 points at least 2 points apart.</li>
-                            <li>The final result for your ranking equals <var>my.score</var> - <var>opponent.score</var>.</li>
-                        </ul>
+    <div class="statement-summary-new-league-rules">
+        <p>Last league with new rules: read new rules in the green sections.</p>
+    </div>
+    <div class="statement-victory-conditions">
+        <div class="icon victory"></div>
+        <div class="blk">
+            <div class="title">Victory Conditions</div>
+            <div class="text">
+                <ul style="padding-bottom:0">
+                    <li>Score more points than your opponent(s) at games end.</li>
+                    <li>Decisive victory when you score 20 points at least 2 points apart.</li>
+                </ul>
                     </div>
                 </div>
             </div>
@@ -112,14 +111,14 @@
                         <const>-30</const>
                         </li>
                     </ul>
-                    <div style="color:#7cc576;background-color:rgba(124,197,118,0.1);">
+                    <div class="statement-summary-new-league-rules">
                         <ul>
                             <li>
                                 <action>LUNGE_DRUG</action>
-                        : energy=
-                        <const>-5</const>
-                        LungeSkill=
-                        <const>+5</const>
+                                : energy=
+                                <const>-5</const>
+                                LungeSkill=
+                                <const>+5</const>
                             </li>
                             <li>
                                 <action>PARRY_DRUG</action>
@@ -191,7 +190,7 @@
                         <li>distance: positive is an attack; negative is a defense; see §Assault.</li>
                         <li>energyTransfer: transfer the quantity from your opponent to you.</li>
                     </ul>
-                    <div style="color:#7cc576;background-color:rgba(124,197,118,0.1);">
+                    <div class="statement-summary-new-league-rules">
                         <ul>
                             <li>EnergyMax: increase the energy gauge!</li>
                             <li>BreakSkill: increase your recovery; added to break's energy .</li>
@@ -230,23 +229,24 @@
                     <h3>Assaults</h3>
                     <p>
                         <br>Assault resolution depends on the positions and distances of the actions:
-                </p>
+                    </p>
                     <div style='background-color:#444;font-family:monospace;padding:1em'>
                         <p>isTouchedWhenLungeParry(strikerPosition:int, defenderPosition:int) -> (defender +
-                        parryDistance)
-                        + (striker + lungeDistance) >= 500;</p>
+                            parryDistance)
+                            + (striker + lungeDistance) >= 500;</p>
                         <p>isTouchedWhenLunge(strikerPosition:int, defenderPosition:int) -> (defender) + (striker +
-                        LungeDistance) >= 500;</p>
+                            LungeDistance) >= 500;</p>
                     </div>
-                    
-                    <div style="color:#7cc576;background-color:rgba(124,197 , 118 , 0.1 );padding:1em;padding-left:6em">
-                        <p>⚠️ don't forget! change the formula to add lungeDistanceSkill and parryDistanceSkill.</p>
+
+                    <div class="statement-summary-new-league-rules">
+                        <p>Don't forget! change the formula to add lungeDistanceSkill and parryDistanceSkill.</p>
                     </div>
 
                     <p>to use it, Normalize the position of your opponent, two sample bellow:</p>
                     <div style='background-color:#444;font-family:monospace;padding:1em'>
                         <p>opponentPositionNormalized = (500 - opponent.position)</p>
-                        <p>IAttackOpponentDefend = isTouchedWhenAttackDefense(my.Position, opponentPositionNormalized)</p>
+                        <p>IAttackOpponentDefend = isTouchedWhenAttackDefense(my.Position,
+                            opponentPositionNormalized)</p>
                         <p>opponentAttack = isTouchedWhenAttack(opponentPositionNormalized, my.position)</p>
                     </div>
 
@@ -923,5 +923,5 @@
             </div>
         </div>
 </div>
-<!--</body>-->
-<!--</html>-->
+</body>
+</html>
