--- a/config/level3/statement_en.html
+++ b/config/level3/statement_en.html
@@ -392,14 +392,14 @@
                         <const>-30</const>
                         </li>
                     </ul>
-                    <div style="color:#7cc576;background-color:rgba(124,197,118,0.1);">
+                    <div class="statement-summary-new-league-rules">
                         <ul>
                             <li>
                                 <action>LUNGE_DRUG</action>
-                        : energy=
-                        <const>-5</const>
-                        LungeSkill=
-                        <const>+5</const>
+                                : energy=
+                                <const>-5</const>
+                                LungeSkill=
+                                <const>+5</const>
                             </li>
                             <li>
                                 <action>PARRY_DRUG</action>
