--- a/config/statement_en.html
+++ b/config/statement_en.html
@@ -1,8 +1,8 @@
-<html>
-<head>
-    <link href="codeingame-mock.css" rel="stylesheet">
-</head>
-<body style="font-family:Open Sans,Lato,sans-serif!important">
+<!--<html>-->
+<!--<head>-->
+<!--    <link href="codeingame-mock.css" rel="stylesheet">-->
+<!--</head>-->
+<!--<body style="font-family:Open Sans,Lato,sans-serif!important">-->
 <div class="statement-body">
     <!-- GOAL -->
     <div class="statement-section statement-goal">
@@ -920,5 +920,5 @@
         <p><b>Give your feedback and vote to encourage the author! Enjoy your games!</b></p>
     </div>
 </div>
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
