--- a/config/statement_en.html
+++ b/config/statement_en.html
@@ -41,6 +41,7 @@
                             frames).
                         </li>
                         <li>issue: you do not respond in due time (50ms) or output an invalid command.</li>
+                        <li>doping: when you abuse of drugs (more than seven).</li>
                     </ul>
                 </ul>
             </div>
