--- a/config/level1/statement_en.html
+++ b/config/level1/statement_en.html
@@ -1,63 +1,60 @@
-<!--<html>-->
-<!--<head>-->
-<!--    <link href="codeingame-mock.css" rel="stylesheet">-->
-<!--</head>-->
-<!--<body style="font-family:Open Sans,Lato,sans-serif!important">-->
-<div class="statement-body">
+﻿
+<div class='statement-body'>
     <!-- GOAL -->
-    <div class="statement-section statement-goal">
+    <div class='statement-section statement-goal'>
         <h2>
-            <span class="icon icon-goal">&nbsp;</span>
+            <span class='icon icon-goal'>&nbsp;</span>
             <span>The Goal</span>
         </h2>
-        <img class="statement-goal-content">
+        <img class='statement-goal-content'>
         <p>
             Hit your opponent and manage our energy to score 20 points!
         </p>
     </div>
 
-    <div class="statement-summary-new-league-rules">
-        <p>new rules added in the league 2 and league 3: ignore the variables marked for the next leagues.</p>
+<div class='statement-summary-new-league-rules'>
+    <p>new rules added in the league 2 and league 3: ignore the variables marked for the next leagues.</p>
     </div>
-    <div class="statement-victory-conditions">
-        <div class="icon victory"></div>
-        <div class="blk">
-            <div class="title">Victory Conditions</div>
-            <div class="text">
-                <ul style="padding-bottom:0">
+    <div class='statement-victory-conditions'>
+        <div class='icon victory'></div>
+        <div class='blk'>
+            <div class='title'>Victory Conditions</div>
+            <div class='text'>
+                <ul style='padding-bottom:0'>
                     <li>Score more points than your opponent(s) at games end.</li>
                     <li>Decisive victory when you score 20 points at least 2 points apart.</li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="statement-lose-conditions">
-        <div class="icon lose"></div>
-        <div class="blk">
-            <div class="title">Loss Conditions</div>
-            <div class="text">
-                <ul style="padding-bottom:0">
+    <div class='statement-lose-conditions'>
+        <div class='icon lose'></div>
+        <div class='blk'>
+            <div class='title'>Loss Conditions</div>
+            <div class='text'>
+                <ul style='padding-bottom:0'>
                     <li>Score fewer points than your opponent(s) at games end.</li>
-                    <li>In some cases you receive a ranking penalty (-1)</li>
+                    <li>In some cases you loses and receives an additional ranking penalty:</li>
                     <ul>
                         <li>forfeit: when you run out of energy.</li>
                         <li>non-combativity: when you and the opponent don't score any point at games end (200
                             frames).
                         </li>
                         <li>issue: you do not respond in due time (50ms) or output an invalid command.</li>
+                        <li>doping: when you abuse of drugs (more than seven)</li>
                     </ul>
                 </ul>
             </div>
         </div>
     </div>
     <!-- RULES -->
-    <div class="statement-section statement-rules">
+    <div class='statement-section statement-rules'>
         <h2>
-            <span class="icon icon-rules">&nbsp;</span>
+            <span class='icon icon-rules'>&nbsp;</span>
             <span>Rules</span>
         </h2>
         <div>
-            <div class="statement-rules-content">
+            <div class='statement-rules-content'>
                 <h3>Actions</h3>
                 <p><br>Two players choose simultaneously only one action:</p>
                 <ul>
@@ -97,16 +94,21 @@
                         <const>2</const>
                     </li>
                 </ul>
+                
+
+
+
                 <p>let me explain the behavior of each property:</p>
-                <ul>
-                    <li>energy: consume and produce in the range [
-                        <const>0</const>
-                        ,
-                        <const>20</const>
-                        ] (see the exception with EnergyMax,
-                        <action>ENERGY_MAX_DRUG</action>
+                
+
+<ul>
+                    <li>energy: consume and produce in the range [<const>0</const>,<const>20</const>]
                         ).
                     </li>
+</ul>
+
+
+<ul>
                     <li>move: apply a move of your character in the range [
                         <const>0</const>
                         ,
@@ -116,7 +118,9 @@
                     <li>distance: positive is an attack; negative is a defense; see &sect;Assault.</li>
                     <li>energyTransfer: transfer the quantity from your opponent to you.</li>
                 </ul>
+
                 <h3>Resolutions</h3>
+
                 <ul>
                     <li>the action's energy is consumed or produced in any cases</li>
                     <li>You declare forfeit when you run out of energy.</li>
@@ -156,24 +160,24 @@
         </div>
     </div>
     <!-- PROTOCOL -->
-    <div class="statement-section statement-protocol">
+    <div class='statement-section statement-protocol'>
         <h2>
-            <span class="icon icon-protocol">&nbsp;</span>
+            <span class='icon icon-protocol'>&nbsp;</span>
             <span>Game I/O</span>
         </h2>
         <!-- Protocol block -->
-        <div class="blk">
-            <div class="title">Input for one game turn</div>
-            <div class="text">
-                <span class="statement-lineno">Line 1, my data:</span>
+        <div class='blk'>
+            <div class='title'>Input for one game turn</div>
+            <div class='text'>
+                <span class='statement-lineno'>Line 1, my data:</span>
                 <var>position</var>&nbsp;<var>energy</var>&nbsp;<var>score</var>&nbsp;<var>drugCount</var>&nbsp;<var>energyMax</var>&nbsp;<var>breakSkill</var>&nbsp;<var>walkSkill</var>&nbsp;<var>doubleWalkSkill</var>&nbsp;<var>retreatSkill</var>&nbsp;<var>doubleRetreatSkill</var>&nbsp;<var>lungeDistanceSkill</var>&nbsp;<var>parryDistanceSkill</var>
             </div>
             <br/>
-            <div class="text">
-                <span class="statement-lineno">Line 2, opponent data:</span>
+            <div class='text'>
+                <span class='statement-lineno'>Line 2, opponent data:</span>
                 <var>position</var>&nbsp;<var>energy</var>&nbsp;<var>score</var>&nbsp;<var>drugCount</var>&nbsp;<var>energyMax</var>&nbsp;<var>breakSkill</var>&nbsp;<var>walkSkill</var>&nbsp;<var>doubleWalkSkill</var>&nbsp;<var>retreatSkill</var>&nbsp;<var>doubleRetreatSkill</var>&nbsp;<var>lungeDistanceSkill</var>&nbsp;<var>parryDistanceSkill</var>
             </div>
-            <div class="text">
+            <div class='text'>
                 <ul>
                     <li>
                         <var>position</var>: range [
@@ -199,64 +203,23 @@
                         <const>0</const>
                         ,
                         <const>+&infin;</const>
-                        [, init
+                        ], init
                         <const>0</const>
                     </li>
                 </ul>
-                <ul>
-                    <li>
-                        <var>drugCount</var>:you can consume a maximum of 7 drugs; range [
-                        <const>0</const>
-                        ,
-                        <const>7</const>
-                        ]; init
-                        <const>0</const>
-                    </li>
-                    <li>
-                        <var>energyMax</var>: init
-                        <const>20</const>
-                        ; increased by
-                        <action>ENERGY_MAX_DRUG</action>
-                    </li>
-                    <li>
-                        <var>breakSkill</var>: increase your recovery; added to break's energy; increased by
-                        <action>BREAK_DRUG</action>
-                    </li>
-                    <li>
-                        <var>walkSkill</var>: added to walk's move; increased by
-                        <action>WALK_DRUG</action>
-                    </li>
-                    <li>
-                        <var>doubleWalkSkill</var>: added to double walk's move;increased by
-                        <action>DOUBLE_WALK_DRUG</action>
-                    </li>
-                    <li>
-                        <var>retreatSkill</var>: added to retreat's move; increased by
-                        <action>RETREAT_DRUG</action>
-                    </li>
-                    <li>
-                        <var>doubleRetreatSkill</var>: added to double retreat's move; increased by
-                        <action>DOUBLE_RETREAT_DRUG</action>
-                    </li>
-                    <li>
-                        <var>lungeDistanceSkill</var>:added to the lunge's distance;increased by
-                        <action>LUNGE_DRUG</action>
-                    </li>
-                    <li>
-                        <var>parryDistanceSkill</var>: added to the parry's distance;increased by
-                        <action>PARRY_DRUG</action>
-                    </li>
-                </ul>
+
+
+
             </div>
         </div>
         <!-- Protocol block -->
-        <div class="blk">
-            <div class="title">Output for one game turn</div>
-            <div class="text">
-                <span class="statement-lineno">Line 1:</span>
+        <div class='blk'>
+            <div class='title'>Output for one game turn</div>
+            <div class='text'>
+                <span class='statement-lineno'>Line 1:</span>
                 <action>myAction</action>
             </div>
-            <div class="text">
+            <div class='text'>
                 possibles values:
                 <ul>
                     <li>
@@ -295,12 +258,15 @@
                         <const>2</const>
                     </li>
                 </ul>
+
+
+
             </div>
         </div>
     </div>
-    <div class="statement-section statement-rules">
-        <h2><span class="icon icon-rules">&nbsp;</span><span>Raw Data</span></h2>
-        <table class="marked">
+    <div class='statement-section statement-rules'>
+        <h2><span class='icon icon-rules'>&nbsp;</span><span>Raw Data</span></h2>
+        <table class='marked'>
             <tr>
                 <th>code</th>
                 <th>energy</th>
@@ -460,11 +426,13 @@
                 </td>
                 <td>1</td>
             </tr>
-            <tr>
+
+
+
+
         </table>
         <h2>Final word!</h2>
         <p><b>Give your feedback and vote to encourage the author! Enjoy your games!</b></p>
     </div>
 </div>
-<!--</body>-->
-<!--</html>-->
+
