--- a/config/level3/statement_en.html
+++ b/config/level3/statement_en.html
@@ -227,6 +227,11 @@
                     </li>
                 </ul>
                 <h3>Assaults</h3>
+                
+<div class='statement-summary-new-league-rules'>
+                        <p>Don't forget! change the formula to handle <var>lungeDistanceSkill</var> and <var>parryDistanceSkill</var>..</p>
+                    </div>
+
                 <p>
                     <br>Assault resolution depends on the positions and distances of the actions:
                 </p>
